--- a/style/style.css
+++ b/style/style.css
@@ -9,12 +9,15 @@
 body{
     font-family: 'Work Sans', sans-serif;
 }
-.navbar{
-    min-height: 70px;
+.navbar-container{
     background-color: bisque;
+    /* height: 70vh; */
+}
+.navbar{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-top: 50px;
 }
 .nav-title{
     font-size: 1.3rem;
@@ -37,12 +40,12 @@ body{
     color: skyblue;
 }
 .banner-section{
-    height: 65vh;
-    background-color: bisque;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 50px;
+    padding-bottom: 30px; 
 }
 .banner-title{
     font-size: 2.5rem;
@@ -69,9 +72,22 @@ body{
     border-radius: 5px;
     cursor: pointer;
 }
+.mate-img{
+    width: 100%;
+    max-width: 800px;
+}
+.team-mate-img{
+    text-align: center;
+    padding-bottom: 30px;
+}
 
-
+/* media query devices starting here */
 @media screen and (max-width: 576px) {
+    .navbar{
+        flex-direction: column;
+    }
+}
+@media only screen and (min-width: 577px) and (max-width: 992px){
     .navbar{
         flex-direction: column;
     }
