--- a/style/style.css
+++ b/style/style.css
@@ -94,10 +94,12 @@ body{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    
 }
 .blog-img{
-    width: 100%;
     /* max-width: 300px; */
+    width: 100%;
+    
 }
 .feature-content{
     flex: 1;
@@ -122,13 +124,89 @@ body{
     font-weight: 500;
     line-height: 24px;
     margin: 20px 0 10px;
-
+}
+/* Our featured section is ending here  */
+/* Love and enjoy section is starting here */
+.love-enjoy-container{
+    display: flex;
+    width: 90%;
+    margin: 70px auto;
+    gap: 100px;
+    align-items: center;
+}
+.love-content{
+    flex-shrink: 5;
+}
+.image-content{
+    width: 100%;
+}
+.enjoy-content{
+    
+}
+.Section-1{
+    
+}
+.love-heading-title{
+    font-size: 3rem;
+    font-weight: 800;
+    color: slateblue;
+    border-left: 4px solid tomato;
+    border-left-width: 6px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding-left: 10px;
+}
+.love-enjoy-description{
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 23px;
+    margin: 20px 0;
+}
+.love-enjoy-items{
+    /* border: 2px solid tomato; */
+    margin-bottom: 30px;
+    padding: 40px 70px 40px 0;
+    box-sizing: border-box;
+    box-shadow: 5px 10px 10px 20px rgb(250, 250, 250);
+    padding-left: 20px;
+}
+.article-one{
+    font-size: 1.2rem;
+    font-size: 400;
+    color: rgb(68, 70, 73);
+    line-height: 50px;
+}
+.article-desc{
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 25px;
+    color: tomato;
+}
+.card-design{
+    width: fit-content;
+    background-color: orange;
+    padding: 10px 18px;
+    border-radius: 5px;
+    position: relative;
+    bottom: 50px;
+}
+.enojoy-yrs{
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 50px;
+}
+.text-desc{
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: tomato;
+    line-height: 22px;
 }
 
-/* Our featured section is ending here  */
 /* media query devices starting here */
 @media screen and (max-width: 576px) {
-    .navbar{
+    .navbar, .love-enjoy-container{
         flex-direction: column;
     }
     .feature-container{
@@ -140,7 +218,7 @@ body{
     }
 }
 @media only screen and (min-width: 577px) and (max-width: 992px){
-    .navbar{
+    .navbar, .love-enjoy-container{
         flex-direction: column;
     }
     .feature-container{
